--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -10,13 +10,15 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<div class="alert alert-success fade-in" role="alert">
-    @ViewBag.SaveResult
-    <button type="button" class="close" data-dismiss="alert">
-        <span>&times;</span>
-    </button>
-</div>
-
+@if (TempData.ContainsKey("SaveResult"))
+    {
+        <div class="alert alert-success fade-in" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+                <span>&times;</span>
+            </button>
+            @TempData["SaveResult"]
+        </div>
+    }
 <table class="table">
     <thead>
         <tr>
