--- a/ElevenNote.WebMVC/Views/Note/Edit.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Edit.cshtml
@@ -6,11 +6,14 @@
 
 <h1>Edit</h1>
 
-<h4>NoteEdit</h4>
+<h4>
+    @Html.DisplayNameFor(model => model.NoteId)
+    @Html.DisplayFor(model => model.NoteId)
+</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -23,7 +26,7 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Submit Changes" class="btn btn-primary" />
             </div>
         </form>
     </div>
