--- a/ElevenNote.WebMVC/Views/Note/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Note/Index.cshtml
@@ -45,6 +45,9 @@
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.IsStarred, new { Id = item.NoteId })
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.CreatedUtc)
                 </td>
                 <td>
@@ -56,3 +59,30 @@
         }
     </tbody>
 </table>
+
+@section scripts {
+<script language="javascript" type="text/javascript">
+    $(document).ready(function () {
+        $("i[data-toggle='star']")
+            .css({ "cursor": "pointer" })
+            .click(function (e) {
+                var target = $(e.target);
+                var noteId = target.attr("data-id");
+                var starSet = target.hasClass("glyphicon-star");
+
+                $.ajax({
+                    method: starSet ? "DELETE" : "PUT",
+                    url: "/api/note/" + noteId + "/star",
+                    data: null
+                })
+                    .done(function (r) {
+                        target.removeClass();
+                        target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
+                    })
+                    .fail(function (r) {
+                        alert("Failed to change star status");
+                    });
+            });
+    });
+</script>
+}
